[gd_scene load_steps=12 format=3 uid="uid://dofcrcwg6cvlu"]

[ext_resource type="Script" path="res://Textbox/dialogue_box.gd" id="1_rimaa"]
[ext_resource type="Texture2D" uid="uid://c01nln3np5ppi" path="res://assets/MainMenu.jpg" id="2_8fwvs"]
[ext_resource type="FontFile" uid="uid://b3y3sa2so5lle" path="res://Textbox/bedstead.regular.otf" id="2_xau0w"]
[ext_resource type="Shader" path="res://textbox/speaker1_active.gdshader" id="3_tii1h"]
[ext_resource type="Texture2D" uid="uid://17o8hwv2iqi" path="res://assets/Portraits/Talos.png" id="4_rn8cs"]
[ext_resource type="Shader" path="res://textbox/speaker2_active.gdshader" id="5_tdbis"]
[ext_resource type="Texture2D" uid="uid://cr31r5ovx8h53" path="res://assets/Portraits/Kiko.png" id="6_6wgvv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iussw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 7
border_width_bottom = 7
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mruph"]
bg_color = Color(0.303233, 0.303233, 0.303233, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8tsnd"]
shader = ExtResource("3_tii1h")
shader_parameter/off = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hoapc"]
shader = ExtResource("5_tdbis")
shader_parameter/off = true

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_rimaa")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(959, 413)
scale = Vector2(0.36, 0.36)
texture = ExtResource("2_8fwvs")

[node name="DialogueBoxContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -289.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="DialogueBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iussw")

[node name="TextContainer" type="MarginContainer" parent="DialogueBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="Panel" type="Panel" parent="DialogueBoxContainer/TextContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mruph")

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueBoxContainer/TextContainer"]
layout_mode = 2

[node name="Text" type="Label" parent="DialogueBoxContainer/TextContainer/HBoxContainer"]
custom_minimum_size = Vector2(1600, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xau0w")
theme_override_font_sizes/font_size = 40
text = "According to all known laws of aviation, there is no way a bee should be able to fly. Its wings are too small to get its fat little body off the ground. The bee, of course, flies anyway because bees don't care what humans think is impossible. Yellow, black. Yellow, black. Yellow, black. Yellow, black. Ooh, black and yellow! Let's shake it up a little. Barry! Breakfast is ready! Coming! Hang on a second. Hello? - Barry? - Adam? - Can you believe this is happening? "
autowrap_mode = 3
clip_text = true

[node name="Continue" type="Label" parent="DialogueBoxContainer/TextContainer/HBoxContainer"]
custom_minimum_size = Vector2(103, 48)
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xau0w")
theme_override_font_sizes/font_size = 40
text = ". . . v"

[node name="NameContainer" type="MarginContainer" parent="DialogueBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="HBoxContainer3" type="HBoxContainer" parent="DialogueBoxContainer/NameContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="DialogueBoxContainer/NameContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xau0w")
theme_override_font_sizes/font_size = 35
text = "Name:"

[node name="LetterDisplayTimer" type="Timer" parent="DialogueBoxContainer"]
one_shot = true

[node name="SpeakerContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -655.0
offset_right = 960.0
offset_bottom = -274.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 130
theme_override_constants/margin_right = 300

[node name="Container" type="Container" parent="SpeakerContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Speaker1" type="Sprite2D" parent="SpeakerContainer/Container"]
material = SubResource("ShaderMaterial_8tsnd")
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_rn8cs")

[node name="Container2" type="Container" parent="SpeakerContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Speaker2" type="Sprite2D" parent="SpeakerContainer/Container2"]
material = SubResource("ShaderMaterial_hoapc")
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_6wgvv")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="DialogueBoxContainer/LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
